--- a/frontend/src/components/Question/Question.css
+++ b/frontend/src/components/Question/Question.css
@@ -7,6 +7,7 @@
     border: 1px solid #2d2d2d;
     border-radius: 15px;
     display: flex;
+
   }
 
   .checkbox{
@@ -39,22 +40,38 @@
 
   
   .custom-checkbox {
-    width: 16px;
-    height: 16px;
-    border: 1px solid #00b9b9;
+    width: 18px;
+    height: 18px;
+    border: 2px solid #2d2d2d;
     border-radius: 6px;
     background-color: #000;
     appearance: none;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  };
+    position: relative;
+    outline: none;
+  }
   
   .custom-checkbox:checked {
     background-color: #00b9b9;
     border-color: #00b9b9;
   }
+
+  .custom-checkbox:checked::after {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 5px;
+    border-left: 3px solid #000;
+    border-bottom: 3px solid #000;
+    transform: rotate(-45deg);
+    top: 4px;
+    left: 3px;
+  }
+
+  .custom-checkbox,
+.bookmark-icon {
+  transition: all 0.2s ease;
+}
   
   .question-text {
     font-size: 14px;
@@ -78,12 +95,16 @@
     justify-content: center;
   }
   
-  .icon.solved {
-    color: #00b9b9;
+  .icon svg {
+    stroke: #ffffff;
+  }
+  
+  .icon.solved svg {
+    stroke: #00b9b9;
   }
   
   .icon.saved svg {
-    color: #ee4b2b;
+    stroke: #ee4b2b;
   }
   
   .platform-icon img {
@@ -127,8 +148,14 @@
   .bookmark-icon {
     color: #ffffff;
   }
+
+  .bookmark-icon.solved {
+    color: #00b9b9;
+    stroke: #00b9b9;
+  }
   
   .bookmark-icon.active {
     color: #ee4b2b;
     fill: #ee4b2b;
+    stroke: #ee4b2b;
   }
