--- a/frontend/src/components/QuestionList/QuestionList.css
+++ b/frontend/src/components/QuestionList/QuestionList.css
@@ -57,6 +57,48 @@
   margin-bottom: 6px;
 }
 
+
+.notes-icon-button {
+  background: transparent;
+  border: 1px solid #9d9d9d;
+  cursor: pointer;
+  padding: 8px;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.notes-icon-button .notes-icon {
+  color: #9d9d9d;
+  transition: color 0.2s ease;
+  stroke: #9d9d9d
+}
+
+.notes-icon-button {
+  border-color: #fff;
+}
+
+.notes-icon-button:hover .notes-icon{
+  border-color: #fff;
+  stroke: #fff;
+}
+
+.questionlist-question-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.highlight{
+  border-color: #00ffff;
+}
+
+.notes-highlight{
+  stroke: #00ffff !important;
+}
+
+
 @media screen and (max-width: 768px){
   .questionlist-wrapper{
     max-width: 80vw;
